[package]
name = "mitmProxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
hyper = { version = "0.14.20", features = ["full"] }
rcgen = { version = "0.9.3", features = ["pem", "x509-parser"] }
rustls = { version = "0.20.6", features = ["logging"] }
tokio-rustls = "0.23.4"
pem = "1.1.0"